--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,9 @@ android {
         applicationId "henrygarant.com.cryptomanager"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 4
-        versionName "1.1.3"
+        multiDexEnabled true
+        versionCode 5
+        versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,22 +24,30 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:animated-vector-drawable:26.1.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
 
     // JSON Parsing
-    compile 'com.google.code.gson:gson:2.6.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.google.code.gson:gson:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     // recyclerview
-    compile 'com.android.support:recyclerview-v7:26.0.1'
+    implementation 'com.android.support:recyclerview-v7:26.0.1'
 
     //image and svg
-    compile group: 'com.cloudinary', name: 'cloudinary-android', version: '1.20.0'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.caverock:androidsvg:1.2.1'
+    implementation group: 'com.cloudinary', name: 'cloudinary-android', version: '1.20.0'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.caverock:androidsvg:1.2.1'
+
+    compile('com.airbnb.android:lottie:2.5.1') {
+        exclude group: 'com.android.support'
+
+    }
+
 
 }
